# MySimplePublisher

./: CMakeLists.txt  package.xml
include/: cv_bridge_galactic.hpp
src/: cv_bridge_galactic.cpp  publisher_node.cpp  publisher_node_copy.cpp
